--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -37,14 +37,79 @@ jobs:
   build_base:
     name: Build Base
     runs-on: ubuntu-latest
-    container: rchain/buildenv
     outputs:
       VERSION: ${{ env.VERSION }}
       BRANCH: ${{ env.BRANCH }}
       DEV_LATEST_TAG: ${{ env.DEV_LATEST_TAG }}
     steps:
       - name: Clone Repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
+
+      - name: Add SBT APT Repositories
+        shell: bash
+        run: |
+          # https://www.scala-sbt.org/1.x/docs/Installing-sbt-on-Linux.html#Ubuntu+and+other+Debian-based+distributions
+          echo "deb https://repo.scala-sbt.org/scalasbt/debian all main" | sudo tee /etc/apt/sources.list.d/sbt.list
+          echo "deb https://repo.scala-sbt.org/scalasbt/debian /" | sudo tee /etc/apt/sources.list.d/sbt_old.list
+          curl -sL "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x2EE0EA64E40A89B84B2DF73499E82A75642AC823" | sudo apt-key add
+
+      - name: Generate APT Cache Key
+        id: apt-cache-key
+        shell: bash
+        run: |
+          sudo apt-get update
+          echo "key=$(sha256sum /var/lib/apt/lists/* | sha256sum | awk '{print $1}')" >> $GITHUB_OUTPUT
+
+      - name: Cache APT Packages
+        uses: actions/cache@v4
+        with:
+          path: |
+            /var/cache/apt
+            /var/lib/apt/lists
+          key: ${{ runner.os }}-apt-${{ steps.apt-cache-key.outputs.key }}
+          restore-keys: |
+            ${{ runner.os }}-apt-
+
+      - name: Install APT Dependencies
+        shell: bash
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y $(cat .github/apt-dependencies.txt)
+          echo "JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64" >> $GITHUB_ENV
+          echo "/usr/libcabal/jvm/java-11-openjdk-amd64/bin" >> $GITHUB_PATH
+
+      - name: Generate Cabal cache key
+        id: cabal-cache-key
+        shell: bash
+        run: |
+          cabal update
+          echo "key=$(sha256sum ~/.cabal/packages/* | sha256sum | awk '{print $1}')" >> $GITHUB_OUTPUT
+
+      - name: Cache Cabal store
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cabal/store
+            ~/.cabal/packages
+            ~/.cabal/bin
+          key: ${{ runner.os }}-cabal-${{ hashFiles('.github/cabal-dependencies.txt') }}-${{ steps.cabal-cache-key.outputs.key }}
+          restore-keys: |
+            ${{ runner.os }}-cabal-
+
+      - name: Install Cabal dependencies
+        shell: bash
+        run: |
+          cabal update
+          xargs cabal install < .github/cabal-dependencies.txt
+          echo "$HOME/.cabal/bin" >> $GITHUB_PATH
+
+      - name: Tool versions
+        shell: bash
+        run: |
+          alex --version
+          happy --version
+          bnfc --version
+          java -version
 
       - name: Initialize Environment
         shell: bash
@@ -58,7 +123,8 @@ jobs:
           echo "VERSION=$version" >> $GITHUB_ENV
 
           # Find latest tag on dev branch
-          dev_latest_tag="`git describe --tags --abbrev=0 origin/dev`"
+          # dev_latest_tag="`git describe --tags --abbrev=0 origin/dev`"
+          dev_latest_tag="`git describe --tags --abbrev=0 dev`"
           echo "DEV_LATEST_TAG=$dev_latest_tag" >> $GITHUB_ENV
 
           # Find related HEAD branch
@@ -77,7 +143,7 @@ jobs:
           echo "BRANCH=$branch" >> $GITHUB_ENV
 
       - name: Restore Cache
-        uses: actions/cache@v1
+        uses: actions/cache@v4
         with:
           path: ${{ env.CACHE_ROOT }}
           key: ${{ env.CACHE_KEY_PREFIX_SCALA }}${{ env.CACHE_KEY_HASH_SCALA }}
@@ -85,17 +151,17 @@ jobs:
 
       - name: Compile
         run: |
-          export SBT_OPTS="$SBT_OPTS -Dsbt.task.timings=true -Xmx2500m -Xss2m"
+          export SBT_OPTS="$SBT_OPTS -Dsbt.task.timings=true -Xmx4g -Xss2m -Dsbt.supershell=false"
           sbt update scalafmtCheckAll compile
 
       - name: Pack Working Tree
-        run: tar -H posix -czf ../rchain-worktree.tar.gz .
+        run: tar -H posix -czf /var/tmp/rchain-worktree.tar.gz .
 
       - name: Save Working Tree
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v4
         with:
           name: rchain-worktree
-          path: ../rchain-worktree.tar.gz
+          path: /var/tmp/rchain-worktree.tar.gz
 
 
   # Get compiled RChain and run unit tests.
@@ -103,7 +169,6 @@ jobs:
     name: Unit Tests
     needs: build_base
     runs-on: ubuntu-latest
-    container: rchain/buildenv
     strategy:
       fail-fast: false
       matrix:
@@ -130,21 +195,21 @@ jobs:
       TESTS: ${{ matrix.tests }}
     steps:
       - name: Clone Repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
 
       - name: Load Working Tree
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v4
         with:
           name: rchain-worktree
 
       - name: Restore Working Tree
-        run: tar -H posix -xzf rchain-worktree/rchain-worktree.tar.gz
+        run: tar -H posix -xzf /var/tmp/rchain-worktree.tar.gz
 
       - name: Initialize Environment
         run: ./.github/init-environment
 
       - name: Restore Cache
-        uses: actions/cache@v1
+        uses: actions/cache@v4
         with:
           path: ${{ env.CACHE_ROOT }}
           key: ${{ env.CACHE_KEY_PREFIX_SCALA }}${{ env.CACHE_KEY_HASH_SCALA }}
@@ -161,21 +226,20 @@ jobs:
     name: Build Docker Image
     needs: build_base
     runs-on: ubuntu-latest
-    container: rchain/buildenv
     steps:
       - name: Load Working Tree
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v4
         with:
           name: rchain-worktree
 
       - name: Restore Working Tree
-        run: tar -H posix -xzf rchain-worktree/rchain-worktree.tar.gz
+        run: tar -H posix -xzf /var/tmp/rchain-worktree.tar.gz
 
       - name: Initialize Environment
         run: ./.github/init-environment
 
       - name: Restore Cache
-        uses: actions/cache@v1
+        uses: actions/cache@v4
         with:
           path: ${{ env.CACHE_ROOT }}
           key: ${{ env.CACHE_KEY_PREFIX_SCALA }}${{ env.CACHE_KEY_HASH_SCALA }}
@@ -192,7 +256,7 @@ jobs:
               | gzip >../artifacts/rnode-docker.tar.gz
 
       - name: Save Docker Image
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v4
         with:
           name: artifacts-docker
           path: ../artifacts/
@@ -204,21 +268,20 @@ jobs:
     needs: build_base
     if: "github.event_name != 'pull_request'"
     runs-on: ubuntu-latest
-    container: rchain/buildenv
     steps:
       - name: Load Working Tree
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v4
         with:
           name: rchain-worktree
 
       - name: Restore Working Tree
-        run: tar -H posix -xzf rchain-worktree/rchain-worktree.tar.gz
+        run: tar -H posix -xzf /var/tmp/rchain-worktree.tar.gz
 
       - name: Initialize Environment
         run: ./.github/init-environment
 
       - name: Restore Cache
-        uses: actions/cache@v1
+        uses: actions/cache@v4
         with:
           path: ${{ env.CACHE_ROOT }}
           key: ${{ env.CACHE_KEY_PREFIX_SCALA }}${{ env.CACHE_KEY_HASH_SCALA }}
@@ -241,7 +304,7 @@ jobs:
               ../artifacts/
 
       - name: Save Packages
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v4
         with:
           name: artifacts-packages
           path: ../artifacts/
@@ -304,7 +367,7 @@ jobs:
       _JAVA_OPTIONS: -XX:MaxRAMPercentage=35.0
     steps:
       - name: Clone Repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
 
       - name: Initialize Environment
         # Only initialize cache keys for "Restore Cache". We're running in the
@@ -312,14 +375,14 @@ jobs:
         run: _READ_ONLY=1 ./.github/init-environment
 
       - name: Restore Cache
-        uses: actions/cache@v1
+        uses: actions/cache@v4
         with:
           path: ${{ env.HOST_CACHE_ROOT }}
           key: ${{ env.CACHE_KEY_PREFIX_PYTHON }}${{ env.CACHE_KEY_HASH_PYTHON }}
           restore-keys: ${{ env.CACHE_KEY_PREFIX_PYTHON }}
 
       - name: Load Docker Image
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v4
         with:
           name: artifacts-docker
 
@@ -368,109 +431,109 @@ jobs:
 
 
   # Upload built Docker image to Docker Hub.
-  release_docker_image:
-    name: Release Docker Image
-    needs:
-      - run_unit_tests
-      - run_integration_tests
-      - build_docker_image
-      - build_base
-    if: "github.event_name == 'push' && (startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/trying' || github.ref == 'refs/heads/staging')"
-    runs-on: ubuntu-latest
-    steps:
-      - name: Load Docker Image
-        uses: actions/download-artifact@v1
-        with:
-          name: artifacts-docker
+  # release_docker_image:
+  #   name: Release Docker Image
+  #   needs:
+  #     - run_unit_tests
+  #     - run_integration_tests
+  #     - build_docker_image
+  #     - build_base
+  #   if: "github.event_name == 'push' && (startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/trying' || github.ref == 'refs/heads/staging')"
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Load Docker Image
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: artifacts-docker
 
-      - name: Import Docker Image
-        run: zcat artifacts-docker/rnode-docker.tar.gz | docker image load
+  #     - name: Import Docker Image
+  #       run: zcat artifacts-docker/rnode-docker.tar.gz | docker image load
 
-      - name: Publish Docker Image
-        env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-          DOCKER_IMAGE_NAME: ${{ secrets.DOCKER_IMAGE_NAME }}
-          # Output from build_base job
-          VERSION: ${{ needs.build_base.outputs.VERSION }}
-          BRANCH: ${{ needs.build_base.outputs.BRANCH }}
-          DEV_LATEST_TAG: ${{ needs.build_base.outputs.DEV_LATEST_TAG }}
-        shell: bash
-        run: |
-          set -eu -o pipefail
+  #     - name: Publish Docker Image
+  #       env:
+  #         DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+  #         DOCKER_IMAGE_NAME: ${{ secrets.DOCKER_IMAGE_NAME }}
+  #         # Output from build_base job
+  #         VERSION: ${{ needs.build_base.outputs.VERSION }}
+  #         BRANCH: ${{ needs.build_base.outputs.BRANCH }}
+  #         DEV_LATEST_TAG: ${{ needs.build_base.outputs.DEV_LATEST_TAG }}
+  #       shell: bash
+  #       run: |
+  #         set -eu -o pipefail
 
-          for var in DOCKERHUB_USERNAME DOCKERHUB_PASSWORD DOCKER_IMAGE_NAME; do
-            if [[ ! -v $var || -z ${!var} ]]; then
-              echo "Required variable $var is not set." >&2
-              exit 1
-            fi
-          done
+  #         for var in DOCKERHUB_USERNAME DOCKERHUB_PASSWORD DOCKER_IMAGE_NAME; do
+  #           if [[ ! -v $var || -z ${!var} ]]; then
+  #             echo "Required variable $var is not set." >&2
+  #             exit 1
+  #           fi
+  #         done
 
-          suffix=""
-          ci_run=""
+  #         suffix=""
+  #         ci_run=""
 
-          # Add suffix if trying or merging
-          if [[ $BRANCH =~ ^(trying|staging)$ ]]; then
-            suffix="-$BRANCH"
+  #         # Add suffix if trying or merging
+  #         if [[ $BRANCH =~ ^(trying|staging)$ ]]; then
+  #           suffix="-$BRANCH"
 
-            # Add CI run number if trying
-            if [[ $BRANCH =~ ^trying$ ]]; then
-              ci_run="-ci-$GITHUB_RUN_NUMBER"
-            fi
-          fi
+  #           # Add CI run number if trying
+  #           if [[ $BRANCH =~ ^trying$ ]]; then
+  #             ci_run="-ci-$GITHUB_RUN_NUMBER"
+  #           fi
+  #         fi
 
-          builtin echo "$DOCKERHUB_PASSWORD" \
-              | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+  #         builtin echo "$DOCKERHUB_PASSWORD" \
+  #             | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
 
-          set -x
+  #         set -x
 
-          image_name="$DOCKER_IMAGE_NAME$suffix"
-          img_version_raw="$image_name:$VERSION$ci_run"
-          # Replace unsupported character `+`
-          img_version="${img_version_raw//[+]/__}"
-          img_latest="$image_name:latest"
+  #         image_name="$DOCKER_IMAGE_NAME$suffix"
+  #         img_version_raw="$image_name:$VERSION$ci_run"
+  #         # Replace unsupported character `+`
+  #         img_version="${img_version_raw//[+]/__}"
+  #         img_latest="$image_name:latest"
 
-          # Release Docker image
-          docker tag coop.rchain/rnode:latest $img_version
-          docker push $img_version
+  #         # Release Docker image
+  #         docker tag coop.rchain/rnode:latest $img_version
+  #         docker push $img_version
 
-          # Tag Docker image as latest if tag is the latest on dev branch
-          if [[ $GITHUB_REF =~ ^refs/tags/ ]] && [[ $DEV_LATEST_TAG =~ $VERSION ]]; then
-            docker tag coop.rchain/rnode:latest $img_latest
-            docker push $img_latest
-          fi
+  #         # Tag Docker image as latest if tag is the latest on dev branch
+  #         if [[ $GITHUB_REF =~ ^refs/tags/ ]] && [[ $DEV_LATEST_TAG =~ $VERSION ]]; then
+  #           docker tag coop.rchain/rnode:latest $img_latest
+  #           docker push $img_latest
+  #         fi
 
-  # GitHub (create) release and packages
-  release_packages:
-    name: Release Packages
-    needs:
-      - run_unit_tests
-      - run_integration_tests
-      - build_packages
-    if: "github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')"
-    runs-on: ubuntu-latest
-    steps:
-      - name: Load Packages
-        uses: actions/download-artifact@v1
-        with:
-          name: artifacts-packages
-      - name: Update release and release artifacts
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: artifacts-packages/*
-          prerelease: true
-          draft: true
-          allowUpdates: true
-          omitBodyDuringUpdate: true
-          token: ${{ secrets.GITHUB_TOKEN }}
+  # # GitHub (create) release and packages
+  # release_packages:
+  #   name: Release Packages
+  #   needs:
+  #     - run_unit_tests
+  #     - run_integration_tests
+  #     - build_packages
+  #   if: "github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')"
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Load Packages
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: artifacts-packages
+  #     - name: Update release and release artifacts
+  #       uses: ncipollo/release-action@v1
+  #       with:
+  #         artifacts: artifacts-packages/*
+  #         prerelease: true
+  #         draft: true
+  #         allowUpdates: true
+  #         omitBodyDuringUpdate: true
+  #         token: ${{ secrets.GITHUB_TOKEN }}
 
-  # Job to notify bors when run is successful. Skipped and cancelled job is considered
-  # as failure. More info https://github.com/bors-ng/bors-ng/issues/1115.
-  bors_success:
-    name: bors build finished
-    needs:
-      - release_docker_image
-    if: "github.event_name == 'push' && (github.ref == 'refs/heads/trying' || github.ref == 'refs/heads/staging') && success()"
-    runs-on: ubuntu-latest
-    steps:
-      - run: true
+  # # Job to notify bors when run is successful. Skipped and cancelled job is considered
+  # # as failure. More info https://github.com/bors-ng/bors-ng/issues/1115.
+  # bors_success:
+  #   name: bors build finished
+  #   needs:
+  #     - release_docker_image
+  #   if: "github.event_name == 'push' && (github.ref == 'refs/heads/trying' || github.ref == 'refs/heads/staging') && success()"
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - run: true
