--- a/.github/workflows/required-workflow.yml
+++ b/.github/workflows/required-workflow.yml
@@ -508,19 +508,17 @@ jobs:
 
       - name: Publish Docker Image
         env:
-          DOCKER_IMAGE_NAME: ${{ secrets.DOCKER_IMAGE_NAME }}
+          DOCKER_IMAGE_NAME: ${{ secrets.LEGACY_DOCKER_IMAGE_NAME }}
           # Output from build_base job
           VERSION: ${{ needs.build_base.outputs.VERSION }}
           BRANCH: ${{ needs.build_base.outputs.BRANCH }}
           DEV_LATEST_TAG: ${{ needs.build_base.outputs.DEV_LATEST_TAG }}
         shell: bash -exu -o pipefail {0}
         run: |
-          for VAR in DOCKER_IMAGE_NAME; do
-            if [[ ! -v $VAR || -z ${!VAR} ]]; then
-              echo "Required variable $VAR is not set." >&2
-              exit 1
-            fi
-          done
+          if [[ ! -v "$DOCKER_IMAGE_NAME" || -z "${!DOCKER_IMAGE_NAME}" ]]; then
+            echo "Required variable \$DOCKER_IMAGE_NAME is not set." >&2
+            exit 1
+          fi
 
           SUFFIX=""
           CI_RUN=""
@@ -544,14 +542,9 @@ jobs:
           IMG_LATEST="$IMAGE_NAME:latest"
 
           # Release Docker image
-          docker tag f1r3flyindustries/f1r3fly-scala-node:latest $IMG_VERSION
+          docker tag $IMG_VERSION $IMG_LATEST
           docker push $IMG_VERSION
-
-          # Tag Docker image as latest if tag is the latest on dev branch
-          if [[ $GITHUB_REF =~ ^refs/tags/ ]] && [[ $DEV_LATEST_TAG =~ $VERSION ]]; then
-            docker tag f1r3flyindustries/f1r3fly-scala-node:latest $IMG_LATEST
-            docker push $IMG_LATEST
-          fi
+          docker push $IMG_LATEST
 
   # GitHub (create) release and packages
   release_packages:
